--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "url": "https://github.com/dpjanes/iotdb-fetch/issues"
     }, 
     "dependencies": {
+        "bluebird-q": "",
         "iotdb-errors": "~3.0.5", 
         "iotdb-helpers": "~3.0.35", 
         "unirest": "~0.5.1"
