--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
         "url": "https://github.com/dpjanes/iotdb-fetch/issues"
     }, 
     "dependencies": {
-        "bluebird-q": "",
+        "bluebird-q": "~2.1.1", 
+        "content-type": "~1.0.2", 
         "iotdb-errors": "~3.0.5", 
         "iotdb-helpers": "~3.0.35", 
         "unirest": "~0.5.1"
