--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "iotdb-helpers": "~3.0.36", 
         "unirest": "~0.5.1"
     }, 
-    "description": "Pipe oriented URL functions", 
+    "description": "Pipe oriented URL functions with caching", 
     "devDependencies": {
         "grunt": "~1.0.1", 
         "grunt-contrib-jshint": "~1.1.0", 
@@ -25,7 +25,6 @@
         "request": "~2.81.0"
     }, 
     "homepage": "https://github.com/dpjanes/node-iotdb", 
-    "iotdb": {}, 
     "license": "Apache-2.0", 
     "main": "index.js", 
     "name": "iotdb-fetch", 
