--- a/package.json
+++ b/package.json
@@ -4,25 +4,10 @@
         "url": "https://github.com/dpjanes/iotdb-fetch/issues"
     }, 
     "dependencies": {
-        "canonical-json": "~0.0.4", 
-        "content-type": "~1.0.4", 
         "iotdb-errors": "~3.1.8", 
-        "iotdb-fs": "~1.0.34", 
-        "iotdb-helpers": "~3.3.2", 
-        "unirest": "~0.5.1"
+        "iotdb-helpers": "~3.3.2"
     }, 
     "description": "Pipe oriented URL functions with caching", 
-    "devDependencies": {
-        "grunt": "~1.0.3", 
-        "grunt-contrib-jshint": "~1.1.0", 
-        "grunt-contrib-nodeunit": "~1.0.0", 
-        "grunt-contrib-uglify": "~3.4.0", 
-        "grunt-contrib-watch": "~1.1.0", 
-        "grunt-jsbeautifier": "~0.2.13", 
-        "jshint-stylish": "~2.2.1", 
-        "load-grunt-tasks": "~3.5.2", 
-        "request": "~2.88.0"
-    }, 
     "homepage": "https://github.com/dpjanes/node-iotdb", 
     "license": "Apache-2.0", 
     "main": "index.js", 
