--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     }, 
     "dependencies": {
         "iotdb-errors": "~3.1.9", 
-        "iotdb-helpers": "~3.4.22"
+        "iotdb-helpers": "~3.4.22", 
+        "zlib": "~1.0.5"
     }, 
     "description": "Pipe oriented URL functions with caching", 
     "homepage": "https://github.com/dpjanes/node-iotdb", 
